--- a/todolist-server/package.json
+++ b/todolist-server/package.json
@@ -26,7 +26,11 @@
     "@nestjs/platform-express": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/config": "^2.3.1",
+    "mysql2": "^2.3.1",
+    "typeorm": "^0.2.39"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
